# opendt

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
config/: default.yaml
config/experiments/: experiment_1.yaml  experiment_2.yaml
data/: .gitkeep
data/SURF/: topology.json
docs/: ARCHITECTURE.md  CONCEPTS.md  CONFIGURATION.md  DATA_MODELS.md  GETTING_STARTED.md
grafana/provisioning/dashboards/: dashboards.yaml  power_dashboard.json
grafana/provisioning/datasources/: datasources.yaml
libs/common/: README.md  pyproject.toml  pytest.ini
libs/common/odt_common/: __init__.py  config.py  result_cache.py  task_accumulator.py
libs/common/odt_common/models/: __init__.py  consumption.py  task.py  topology.py  workload_message.py
libs/common/odt_common/odc_runner/: __init__.py  runner.py
libs/common/odt_common/utils/: __init__.py  kafka.py
libs/common/opendt_common/: __init__.py  config.py
libs/common/opendt_common/models/: __init__.py  consumption.py  fragment.py  topology.py  workload_message.py
libs/common/opendt_common/utils/: __init__.py
libs/common/tests/: __init__.py  test_models.py  test_topology.py
reproducibility-capsule/: README.md  generate_plot.py
reproducibility-capsule/exp_2/data/: opendt_calibrated.parquet
reproducibility-capsule/exp_2/exp_2_plot_mape_over_time/: exp_2_plot_mape_over_time_original.py  exp_2_plot_mape_over_time_over_under_est.py
reproducibility-capsule/plots/: __init__.py  config.py  cpu_latency_plot.py  data_loader.py  energy_plot.py  job_completion_plot.py  mape_over_time_plot.py  power_prediction_plot.py  processors.py  sustainability_overview_plot.py
reproducibility_capsule/exp_1/data/: opendt_cpu_latency_bytime.csv  opendt_non_calibrated.parquet
reproducibility_capsule/exp_1/data/raw_uncalibrated/: calibration_processor.py
reproducibility_capsule/exp_1/data/raw_uncalibrated/run_1/: metadata.json
reproducibility_capsule/exp_1/data/raw_uncalibrated/run_10/: metadata.json
reproducibility_capsule/exp_1/exp_1_behaviour_analysis/: exp_1_behaviour_analysis.py
reproducibility_capsule/exp_1/exp_1_cpu_latency/: exp1_plot_cpu_latency.py  exp_1_cpu_latency.ipynb
reproducibility_capsule/exp_1/exp_1_power_draw/: exp1_plot_power_draw.ipynb  exp1_plot_power_draw.py
reproducibility_capsule/exp_2/data/: opendt_calibration.parquet  opendt_no_calibration.parquet
reproducibility_capsule/exp_2/exp_2_plot_mape_barchart/: exp_2_plot_mape_barchart.py
reproducibility_capsule/exp_2/exp_2_plot_mape_over_time/: exp2_more_plotting.py  exp2_plot_mape_over_time.py  exp_2_mape_over_time.ipynb  exp_2_plot_mape_over_time.py
reproducibility_capsule/exp_2/exp_2_plot_power_over_time/: exp_2_plot_power_over_time.py
reproducibility_capsule/experiment_1/: exp1_plot_power_draw.py  plot_footprinter.ipynb  plot_footprinter.py
reproducibility_capsule/experiment_1/data/: opendt.parquet
scripts/: __init__.py  monitor_resources.sh  opendt_cli.py
services/api/: Dockerfile  README.md
services/api/api/: carbon_query.py  main.py
services/calibrator/: Dockerfile  README.md
services/calibrator/calibrator/: __init__.py  calibration_engine.py  main.py  mape_comparator.py  power_tracker.py  result_processor.py  topology_manager.py
services/dashboard/: Dockerfile  README.md
services/dashboard/dashboard/: __init__.py  main.py  power_query.py
services/dashboard/static/: style.css
services/dashboard/static/js/: boot.js  charts.js  llm.js  polling.js  recommendations.js  render.js  ui.js  utils.js
services/dashboard/templates/: index.html
services/dc-mock/: Dockerfile  README.md
services/dc-mock/dc_mock/: __init__.py  main.py
services/dc-mock/dc_mock/producers/: __init__.py  base.py  power_producer.py  topology_producer.py  workload_producer.py
services/grafana/: README.md
services/grafana/provisioning/dashboards/: dashboards.yaml  power_dashboard.json
services/kafka-init/: Dockerfile  README.md
services/kafka-init/kafka_init/: __init__.py  main.py
services/opendt-api/: Dockerfile  README.md
services/opendt-api/opendt_api/: main.py
services/sim-worker/: Dockerfile  README.md  pytest.ini
services/sim-worker/sim_worker/: __init__.py  experiment_manager.py  main.py  result_cache.py  window_manager.py
services/sim-worker/sim_worker/runner/: __init__.py  java_home.py  models.py  opendc_runner.py
services/sim-worker/tests/: __init__.py  conftest.py  test_contiguous_windows.py  test_opendc_simple.py
services/simulator/: Dockerfile  README.md  pytest.ini
services/simulator/simulator/: __init__.py  main.py  result_cache.py  result_processor.py
services/simulator/tests/: __init__.py  conftest.py  test_opendc_simple.py  test_task_accumulator.py
site/: docusaurus.config.js
site/community/: 0-support.mdx  1-team.mdx  2-contributing.md  3-research.md
site/docs/: intro.mdx  reproducibility.md
site/docs/concepts/: _category_.json  architecture.md  calibration.md  data-models.md  power-models.md  windowing.md
site/docs/configuration/: _category_.json  config-files.md  global-settings.md  topology.md  workloads.md
site/docs/getting-started/: _category_.json  installation.md  prerequisites.md  running.md
site/docs/services/: _category_.json  api.md  calibrator.md  dc-mock.md  grafana.md  kafka.md  simulator.md
site/src/components/HomepageFeatures/: index.js  styles.module.css
site/src/components/HomepageIntro/: index.js  styles.module.css
site/src/css/: custom.css
site/src/pages/: index.js
workload/SURF/: topology.json  workload.yaml
(+473 files in other folders)
